--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^3.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cross-env": "^7.0.2",
+    "dataloader": "^2.0.0",
     "graphql": "^15.3.0",
     "graphql-query-complexity": "^0.7.0",
     "graphql-tools": "^6.2.4",
@@ -50,6 +53,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "start-server-webpack-plugin": "^2.2.5",
+    "type-graphql": "^1.1.0",
     "typeorm": "^0.2.28",
     "webpack": "^5.1.0",
     "webpack-node-externals": "^2.5.2"
@@ -60,6 +64,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.3",
+    "@types/graphql": "^14.5.0",
     "@types/graphql-query-complexity": "^0.2.1",
     "@types/jest": "26.0.10",
     "@types/joi": "^14.3.4",
