--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.3",
     "@nestjs/typeorm": "^7.1.4",
+    "@types/del": "^4.0.0",
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
     "bcryptjs": "^2.4.3",
@@ -38,11 +40,20 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "dataloader": "^2.0.0",
+    "dayjs": "^1.9.3",
+    "del": "^6.0.0",
+    "express-session": "^1.17.1",
+    "find": "^0.3.0",
+    "google-auth-library": "^6.1.2",
     "graphql": "^15.3.0",
     "graphql-query-complexity": "^0.7.0",
     "graphql-tools": "^6.2.4",
+    "graphql-type-json": "^0.3.2",
+    "graphql-upload": "^11.0.0",
+    "helmet": "^4.2.0",
     "joi": "^17.2.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.14",
@@ -63,9 +74,14 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
+    "@types/express-session": "^1.17.0",
+    "@types/find": "^0.2.1",
     "@types/graphql": "^14.5.0",
     "@types/graphql-query-complexity": "^0.2.1",
+    "@types/graphql-type-json": "^0.3.2",
+    "@types/graphql-upload": "^8.0.4",
     "@types/jest": "26.0.10",
     "@types/joi": "^14.3.4",
     "@types/node": "^13.9.1",
